Added  deliveries services and use of http
Added all-delivered-orders, explore-new-deliveries, home-delivery-boy services

--- a/Front-end App/DeliverItAngularProject/src/app/all-delivered-orders/all-delivered-orders.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/all-delivered-orders/all-delivered-orders.component.html
@@ -24,6 +24,7 @@
 
 
 <div class="all-orders">
+  <!--Aca debere hacer un *ngFor con los datos de los pedidos anteriores, aunque debere mostrar solo los atributos del shop-type como los que se indican abajo-->
   <div class="order-cards-container">
     <app-shop-card title="Lemmy's Pizza" subtitle="Origen: Urquiza 1500" bottomText="Destino: Paraguay 735 1°B"
       [hasStar]=false [hasDropdown]=false></app-shop-card>
