--- a/Front-end App/DeliverItAngularProject/src/app/explore-new-deliveries/explore-new-deliveries.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/explore-new-deliveries/explore-new-deliveries.component.html
@@ -15,6 +15,7 @@
 
 <div class="orders-available">
   <div class="order-cards-container">
+    <!--Aqui se debera hacer un *ngFor con los <app-shop-card> y dentro de los shop-card, los <app-deliver-order-description> con los atributos que tenemos de cada Order que sacamos de nuestra lista del componente.-->
     <app-shop-card title="Lemmy's Pizza" subtitle="Origen: Urquiza 1500" bottomText="Destino: Paraguay 735 1°B" [hasStar]=false [hasDropdown]=true></app-shop-card>
     <app-shop-card title="Mostaza" subtitle="Av. Pellegrini 1700" bottomText="Destino: Tucumán 1027 5°A" [hasStar]=false [hasDropdown]=true></app-shop-card>
   </div>
