Logic in Components and Services to create an Order added

--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -2,15 +2,13 @@
 
 
 <nav class="navbar">
-  <div class="container-search">
+  <form>
     <div class="search">
       <span class="material-symbols-rounded search-icon">search</span>
       <input type="text" placeholder="Buscar local, producto ...">
     </div>
-  </div>
-  <div class="container-menu">
-    <span class="material-symbols-rounded menu">menu</span>
-  </div>
+  </form>
+  <span class="material-symbols-rounded menu">menu</span>
 </nav>
 <h6 id="categories-title">Explorá nuestras categorías</h6>
 <div class="parent-container-max-width">
@@ -26,11 +24,13 @@
 <h6 id="popular-shops-title">Los locales más populares</h6>
 <div class="parent-container-max-width">
   <div class="shop-cards-container">
-    <app-shop-card title="Lemmy's Pizza" subtitle="Urquiza 1500" bottomText="4.5" [hasStar]=true routerLink="/shop-customer"></app-shop-card>
-    <app-shop-card title="Mostaza" subtitle="Av. Pellegrinni 1700" bottomText="4.2" [hasStar]=true></app-shop-card>      
-    <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
-    <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
-    <app-shop-card title="Gianduia Gelateria" subtitle="Bv. Orono 300" bottomText="4.1" [hasStar]=true></app-shop-card>
+    <app-shop-card *ngFor="let shop of getAll()"
+      title={{shop.name}}
+      subtitle={{shop.address}}
+      bottomText={{shop.stars}}
+      [hasStar]=true
+      routerLink="/shop-customer">
+    </app-shop-card>
   </div>
 </div>
 <footer class="footer"></footer>
