--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
@@ -2,23 +2,10 @@
   margin-top: 10px;
   display: flex;
   justify-content: space-between;
-  height: 7.5vh;
-}
-
-.container {
-  &-search {
-    width: 75%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &-menu {
-    width: 25%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  align-items: center;
+  height: 70px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .menu {
@@ -27,7 +14,6 @@
 
 .search {
   display: flex;
-  margin-left: 15px;
   border-radius: 50px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   height: 50px;
