--- a/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.scss
@@ -1,21 +1,36 @@
-.container {
+@media screen and (max-width: 576px) {
+  .container {
+    width: 80%;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .container {
+    width: 65%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .container {
+    width: 45%;
+  }
+}
+
+.parent-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .title-container {
-  margin-top: 50px;
-  width: 80%;
+  margin: 50px 0 20px 0;
+  text-align: center;
 }
 
 .message-container {
-  width: 80%;
   margin-top: 15px;
-}
-
-.align-left {
-  text-align: left;
+  display: flex;
+  justify-content: space-between;
 }
 
 .quantity-total-container {
@@ -25,8 +40,8 @@
 }
 
 .line-items-container {
-  margin-top: 10px;
-  width: 80%;
+  margin: 10px 0;
+  //width: 80%;
 }
 
 .line-item {
@@ -34,7 +49,7 @@
 }
 
 .total-container {
-  width: 80%;
+  //width: 80%;
   display: flex;
   justify-content: space-between;
   border-top: 1px solid rgba(0, 0, 0, .2);
@@ -42,6 +57,6 @@
 }
 
 .button-container {
-  width: 80%;
+  //width: 80%;
   margin-top: 80px;
 }
