Shop inputs validations added

--- a/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="options-container">
-    <div class="options">
+    <div class="options" (click)="onAddProducts()">
         <div class="center">
             <div class="buttons_logos">
                 <img id="plus_icon" src="assets\buttons_logos\plus_sign_icon.png" alt="plus_sign_icon">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="options">
+    <div class="options" (click)="onModifyProducts()">
         <div class="center">
             <div class="buttons_logos">
                 <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="plus_sign_icon">
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div class="options">
+    <div class="options" (click)="onModifyShopData()">
         <div class="center">
             <div class="buttons_logos">
                 <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="plus_sign_icon">
