--- a/Front-end App/DeliverItAngularProject/src/app/signup_shop_data/signup-shop-data1/signup-shop-data1.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/signup_shop_data/signup-shop-data1/signup-shop-data1.component.scss
@@ -80,3 +80,8 @@ select{
     color: adjust-color($color: #444444d3);
     background-color:adjust-color($color: #d1d1d1);
 }
+
+#errors{
+  margin-top: -6px;
+  margin-bottom: 22px;
+}
