shop-list-product component added and some minor refactors made

--- a/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
@@ -11,7 +11,7 @@
         <p class="card-subtitle">Urquiza 1500</p>
         <div class="text-and-star-container">
           <p class="card-bottomText">4.8</p>
-          <img class="star-image" src="https://pixlok.com/wp-content/uploads/2021/07/Rating-SVG-Icon-s9fd.png">
+          <img class="star-image" src="..\assets\buttons_logos\star_rating_icon.png">
           <p class="opiniones">Ver opiniones</p>
         </div>
       </div>
