--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
@@ -5,16 +5,21 @@
   <div class="text-container">
     <p class="card-title">{{ title }}</p>
     <p class="card-subtitle">{{ subtitle }}</p>
-    <div class="text-and-star"><p class="card-bottomText">{{ bottomText }}</p><img *ngIf="hasStar === true" class="star-image" src="https://pixlok.com/wp-content/uploads/2021/07/Rating-SVG-Icon-s9fd.png"></div>
+    <div class="text-and-star"><p class="card-bottomText">{{ bottomText }}</p><img *ngIf="hasStar === true" class="star-image" src="..\assets\buttons_logos\star_rating_icon.png"></div>
   </div>
   <div *ngIf="hasDropdown === true" class="dropdown">
     <span class="material-symbols-outlined" (click)="showDescription()">expand_more</span>
   </div>
-  <div *ngIf="hasButton === true" class="add-product-button-container">
+  <div *ngIf="hasAddButton === true" class="add-product-button-container">
     <div class="button-subcontainer">
       <app-add-product-button
         [productId]=productId>
       </app-add-product-button>
+    </div>
+  </div>
+  <div *ngIf="hasEditButton === true" class="add-product-button-container">
+    <div class="button-subcontainer">
+      <app-edit-product-button></app-edit-product-button>
     </div>
   </div>
 </div>
