--- a/Front-end App/DeliverItAngularProject/src/app/shop-type-icon/shop-type-icon.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-type-icon/shop-type-icon.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="icon-container">
-    <span class="material-symbols-rounded icon">{{ icon }}</span>
+    <span class="material-symbols-rounded icon">{{ iconDescription }}</span>
   </div>
-  <p class="subtitle">{{ subtitle }}</p>
+  <p class="subtitle">{{ description }}</p>
 </div>
