--- a/Front-end App/DeliverItAngularProject/src/styles.scss
+++ b/Front-end App/DeliverItAngularProject/src/styles.scss
@@ -150,3 +150,9 @@ they are in the global scss because it's used in different components */
     opacity: 1;
   }
 }
+
+// Make Cursor pointer
+.link {
+  cursor: pointer;
+  margin-bottom: 30px;
+}
