--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
@@ -1,43 +1,3 @@
-.navbar {
-  margin-top: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 70px;
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-.menu {
-  font-size: 50px;
-}
-
-.search {
-  display: flex;
-  border-radius: 50px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  height: 50px;
-  align-items: center;
-  width: 65vw;
-  transition: .2s;
-
-  &-icon {
-    color: rgba(0, 0, 0, 0.6);
-    margin-left: 13px;
-  }
-}
-
-input[type="text"] {
-  margin-left: 15px;
-  border-bottom: none;
-  background-color: transparent;
-}
-
-.search:hover {
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  transition: .2s;
-}
-
 h6 {
   text-align: left;
   margin-left: 10%;
@@ -46,6 +6,10 @@ h6 {
 #categories-title {
   margin-top: 25px;
   font-size: 16px;
+}
+
+.margin-left {
+  margin-left: 10%;
 }
 
 #popular-shops-title {
