--- a/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.html
@@ -31,7 +31,7 @@
       <p class="card-title">$ {{ getTotal() }}</p>
     </div>
     <div class="button-container">
-      <app-primary-button title="CONFIRMAR" routerLink="/home-customer"></app-primary-button>
+      <app-primary-button title="CONFIRMAR" routerLink="/order-confirmed"></app-primary-button>
     </div>
   </div>
 </div>
