--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
@@ -21,8 +21,8 @@
 <div class="content-container" id="margin-0">
   <div class="cards-container">
     <app-shop-card 
-      *ngFor="let product of getProducts()"
-        [productId]=product.id
+      *ngFor="let product of products"
+        productId={{product.id}}
         title={{product.name}}
         subtitle={{product.description}}
         bottomText="$ {{product.price}}"
