--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.scss
@@ -1,5 +1,91 @@
-@import '../../styles.scss';
+@import "../../styles.scss";
 
+@media screen and (max-width: 576px) {
+  .buttons-order-container {
+    width: 80%;
+  }
+
+  .total-container {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+  }
+
+  .cards-container {
+    width: 80%;
+    margin-bottom: 40px;
+  }
+
+  .shop-data {
+    width: 80%;
+    display: flex;
+    height: 80px;
+  }
+
+  .products-title {
+    text-align: left;
+    margin-left: 10%;
+    margin-top: 40px;
+  }
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+  .buttons-order-container {
+    width: 65%;
+  }
+
+  .total-container {
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+  }
+
+  .cards-container {
+    width: 65%;
+    margin-bottom: 40px;
+  }
+
+  .shop-data {
+    width: 65%;
+    display: flex;
+    height: 80px;
+  }
+
+  .products-title {
+    text-align: left;
+    margin-left: 17.5%;
+    margin-top: 40px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .buttons-order-container {
+    width: 60%;
+  }
+
+  .total-container {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  .cards-container {
+    width: 60%;
+    margin-bottom: 40px;
+  }
+
+  .shop-data {
+    width: 60%;
+    display: flex;
+    height: 80px;
+  }
+
+  .products-title {
+    text-align: left;
+    margin-left: 20%;
+    margin-top: 40px;
+  }
+}
 
 .banner {
   &-container {
@@ -22,18 +108,10 @@
   margin-top: 20px;
 }
 
-.shop {
-  &-data {
-    width: 80%;
-    display: flex;
-    height: 80px;
-  }
-
-  &-icon {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-  }
+.shop-icon {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 
 .image-container {
@@ -62,20 +140,9 @@
   margin-left: 5px;
 }
 
-.products-title {
-  text-align: left;
-  margin-left: 10%;
-  margin-top: 40px;
-}
-
 .container-add-button {
   height: 26px;
   width: 100px;
-}
-
-.cards-container {
-  width: 80%;
-  margin-bottom: 40px;
 }
 
 #margin-0 {
@@ -96,12 +163,6 @@
   border-radius: 17px 17px 0 0;
 }
 
-.total-container {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-}
-
 #total-text {
   font-family: Poppins;
   font-size: 20px;
@@ -113,17 +174,13 @@
   font-weight: 600;
 }
 
-.buttons-order-container {
-  width: 80%;
-}
-
 .cancel-button {
   margin-top: 10px;
   width: 100%;
   background-color: #ffffff;
   border-radius: 10px;
   border: none;
-  transition: .2s;
+  transition: 0.2s;
   color: #000;
   text-align: center;
   font-family: Poppins;
