--- a/Front-end App/DeliverItAngularProject/src/app/shop-modify-product/shop-modify-product.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-modify-product/shop-modify-product.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="container">
-  <h1 (click)="getOne()">Editar producto</h1>
+  <h1>Editar producto</h1>
   <form class="input-button" [formGroup]="shopModifyProductForm">
     <div class="input-group">
       <h6>Nombre</h6>
