--- a/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.html
@@ -3,15 +3,20 @@
   <div class="content">
     <h3 class="link" routerLink="/home-customer">< Volver al Inicio</h3>
     <h3 *ngIf="shopType; else elseBlock">{{ shopType.description }}</h3>
-    <ng-template #elseBlock><h3>Resultados de la búsqueda para "{{ this.searchInput }}"</h3></ng-template>
+    <ng-template #elseBlock
+      ><h3>
+        Resultados de la búsqueda para "{{ this.searchInput }}"
+      </h3></ng-template
+    >
     <div class="shops">
       <app-shop-card
         *ngFor="let s of shops"
         shopId="{{ s.id }}"
         title="{{ s.name }}"
-        subtitle="{{ s.address }}"
+        [subtitle]="s.street + ' ' + s.streetNumber"
         bottomText="{{ s.stars }}"
         [hasStar]="true"
+        [imagePath]="s.logoPath"
       >
       </app-shop-card>
     </div>
