--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -19,7 +19,7 @@
       [subtitle]="shop.street + ' ' + shop.streetNumber"
       bottomText={{shop.stars}}
       [hasStar]=true
-      routerLink="/shop-customer"
+      [routerLink]="['/shop-customer', shop.id]"
       imagePath={{shop.logoPath}}>
     </app-shop-card>
   </div>
