--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
@@ -26,6 +26,7 @@
         title={{product.name}}
         subtitle={{product.description}}
         bottomText="$ {{product.price}}"
+        imagePath={{product.photoPath}}
         [hasAddButton]="true">
     </app-shop-card>
   </div>  
